// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchRecords page renders error alert if error occurs during search 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          className="search-body"
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(Alert)
        message="Error has occurred during request and request cannot be processed. Please contact eSpace administrators or try again later."
        pushToTop={true}
        title="Error"
        type="error_outline"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`SearchRecords page renders loading screen while export publications loading 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          className="search-body"
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`SearchRecords page should render advanced search component 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          className="search-body"
          facetsChanged={[Function]}
          isAdvancedSearch={true}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`SearchRecords page should render loading screen while export publications loading 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          className="search-body"
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={9}
      sm={true}
      xs={true}
    >
      <StandardCard
        noHeader={true}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <span>
              Searching for works
            </span>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListSorting)
              disabled={true}
              onExportPublications={[Function]}
              onPageSizeChanged={[Function]}
              onSortByChanged={[Function]}
              pageSize={20}
              sortBy="score"
              sortDirection="Desc"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListPaging)
              disabled={true}
              loading={true}
              onPageChanged={[Function]}
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          container={true}
          justify="center"
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(InlineLoader)
              message="Exporting search results"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
        <WithStyles(PublicationsListPaging)
          disabled={true}
          loading={true}
          onPageChanged={[Function]}
        />
      </StandardCard>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`SearchRecords page should render loading screen while loading publications while filtering 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          className="search-body"
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          searchLoading={true}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(InlineLoader)
        message="Searching for works"
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={9}
      sm={true}
      xs={true}
    >
      <StandardCard
        noHeader={true}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <span>
              Searching for works
            </span>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListSorting)
              disabled={true}
              onExportPublications={[Function]}
              onPageSizeChanged={[Function]}
              onSortByChanged={[Function]}
              pageSize={20}
              sortBy="score"
              sortDirection="Desc"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListPaging)
              disabled={true}
              loading={true}
              onPageChanged={[Function]}
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          container={true}
          justify="center"
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(InlineLoader)
              message="Searching for works"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
        <WithStyles(PublicationsListPaging)
          disabled={true}
          loading={true}
          onPageChanged={[Function]}
        />
      </StandardCard>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`SearchRecords page should render loading screen while loading search results 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          className="search-body"
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          searchLoading={true}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(InlineLoader)
        message="Searching for works"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`SearchRecords page should render no results 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          className="search-body"
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        text={
          <div>
            We were unable to find any results.
          </div>
        }
        title="No works found"
      >
        <div>
          We were unable to find any results.
        </div>
      </StandardCard>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`SearchRecords page should render placeholders 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          className="search-body"
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`SearchRecords page should show available filters or selected filters if activeFacets OA selected (even if there are no results) 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "showOpenAccessOnly": true,
            }
          }
          className="search-body"
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        text={
          <div>
            We were unable to find any results.
          </div>
        }
        title="No works found"
      >
        <div>
          We were unable to find any results.
        </div>
      </StandardCard>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`SearchRecords page should show available filters or selected filters if activeFacets filter selected (even if there are no results) 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {
                "Display type": 179,
              },
            }
          }
          className="search-body"
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        text={
          <div>
            We were unable to find any results.
          </div>
        }
        title="No works found"
      >
        <div>
          We were unable to find any results.
        </div>
      </StandardCard>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`SearchRecords page should show available filters or selected filters if activeFacets range selected (even if there are no results) 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "ranges": Object {
                "Year published": Object {
                  "from": 2015,
                  "to": 2018,
                },
              },
            }
          }
          className="search-body"
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        text={
          <div>
            We were unable to find any results.
          </div>
        }
        title="No works found"
      >
        <div>
          We were unable to find any results.
        </div>
      </StandardCard>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`SearchRecords page should show available filters or selected filters if publicationsListFacets returned (even if there are no results) 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          className="search-body"
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        text={
          <div>
            We were unable to find any results.
          </div>
        }
        title="No works found"
      >
        <div>
          We were unable to find any results.
        </div>
      </StandardCard>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={true}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={false}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        md={3}
      >
        <StandardRighthandCard
          title="Refine results"
        >
          <FacetsFilter
            activeFacets={
              Object {
                "filters": Object {},
                "ranges": Object {},
              }
            }
            disabled={false}
            excludeFacetsList={Array []}
            facetsData={
              Object {
                "Another facet": 2,
                "Some facet": 1,
              }
            }
            lookupFacetsList={
              Object {
                "Author": "Author (lookup)",
                "Collection": "Collection (lookup)",
                "Subject": "Subject (lookup)",
              }
            }
            onFacetsChanged={[Function]}
            renameFacetsList={
              Object {
                "Display type": "Work type",
                "Subtype": "Work subtype",
              }
            }
            showOpenAccessFilter={true}
          />
        </StandardRighthandCard>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</StandardPage>
`;
